# abs_v2

./: .gitignore  .~lock.O que já fizemos.docx#  O que já fizemos.docx  README.md  pyproject.toml
config/: areas.txt  centro_custo.txt  coletes.txt  empresas.txt  lideres.txt  observacoes.txt  setores.txt  turnos.txt
src/: app.py  components.py  configuracoes.py  database.py  ferias.py  inicio.py  ocorrencias.py  page_2.py  registro_desligamento.py  relatorio_ativos.py  relatorios.py
