[tool.poetry]
name = "abs-project"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Roberto <robertoventura.rvs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
customtkinter = "^5.2.2"
tkcalendar = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
